# OpenCPN-1

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
buildandroid/: README.md  build-assetbridge.sh  build-cairo.sh  build-curl.sh  build-expat.sh  build-freetype2.sh  build-libarchive.sh  build-libpng.sh  build-pixman.sh  build-zlib.sh  toolchain.cmake
buildandroid/assetbridge/jni/: assetbridge.c
buildandroid/patches/wxWidgets/: 0001-qt-app.h-Add-missing-include-wx-scopedptr.h.patch  0002-qt-window.h-Add-missing-include-wx-scopedptr.h.patch
cmake/: FindLibArchive.cmake  FindQt5.cmake
debian/: README.Debian  README.source  changelog  control  copyright  install  opencpn-doc.install  opencpn.1  rules  watch
flatpak/: org.opencpn.OpenCPN.yaml
include/: BasePlatform.h  OCPNPlatform.h  OCPN_AUIManager.h  PluginHandler.h  bad_library_dlg.h  bad_plugin_dlg.h  bad_plugvers_dlg.h  bad_symbol_dlg.h  catalog_parser.h  check_platform.h  config_var.h  load_errors_dlg.h  mvc_gui_control.h  ocpn_frame.h  ocpn_plugin.h  plugin_loader.h  pluginmanager.h
plugins/wmm_pi/cmake/: PluginInstall.cmake
src/: BasePlatform.cpp  OCPNPlatform.cpp  PluginHandler.cpp  PluginPaths.cpp  androidUTIL.cpp  api_shim.cpp  catalog_parser.cpp  chart1.cpp  check_platform.cpp  cli.cpp  config_var.cpp  console.cpp  download_mgr.cpp  load_errors_dlg.cpp  mvc_gui_control.cpp  navutil.cpp  ocpn_frame.cpp  ocpn_plugin.cpp  options.cpp  plugin_api.cpp  plugin_api_shim.cpp  plugin_cache.cpp  plugin_handler.cpp  plugin_loader.cpp  pluginmanager.cpp  safe_mode.cpp  update_mgr.cpp
test/: CMakeLists.txt
test/src/: catalog_test.cpp  platform_test.cpp
